--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1>Home</h1>
+<h1>대문</h1>
 
 <a th:href="@{/member/joinForm}" sec:authorize="!isAuthenticated()">회원가입</a>
 <a th:href="@{/member/login}" sec:authorize="!isAuthenticated()">로그인</a>
@@ -15,16 +15,14 @@
 <span  sec:authorize="isAuthenticated()" sec:authentication="name">사용자</span>
 <span  sec:authorize="isAuthenticated()" sec:authentication="principal.authorities">권한</span>
 
-<!-- <a th:href="@{/logout}" sec:authorize="isAuthenticated()">로그아웃</a>  -->
+<a th:href="@{/logout}" sec:authorize="isAuthenticated()">로그아웃</a> 
 
 
-<!-- <br>
+<br>
 
-<a th:href="@{/regCategoryForm}">카테고리 등록</a>
+<!-- <a th:href="@{/regCategoryForm}">카테고리 등록</a>
 <a th:href="@{/regBoardForm}">게시글 등록</a>
-<a th:href="@{/board/list}">전체 게시글 목록</a>
-
-  -->
+<a th:href="@{/board/list}">전체 게시글 목록</a> -->
 
 
 
