--- a/src/main/resources/templates/member/joinForm.html
+++ b/src/main/resources/templates/member/joinForm.html
@@ -11,31 +11,28 @@
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link th:href="@{/css/signin.css}" rel="stylesheet">
 
-    <title>회원가입</title>
+    <title>Login</title>
 </head>
 
 <body class="text-center">
-<!-- <form class="form-signin" th:action="@{/account/register}" method="post">
+<form class="form-signin" th:action="@{/member/joinForm}" method="post">
     <a th:href="@{/}"><img class="mb-4" src="https://getbootstrap.com/docs/4.5/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72"></a>
     <h1 class="h3 mb-3 font-weight-normal">회원가입</h1>
     <label for="username" class="sr-only">Username</label>
     <input type="text" id="username" name="username" class="form-control" placeholder="Username" required autofocus>
     <label for="inputPassword" class="sr-only">Password</label>
     <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
-    <div class="checkbox mb-3">
+    <!-- <div class="checkbox mb-3">
       <label>
         <input type="checkbox" value="remember-me"> Remember me
       </label>
-    </div>
+    </div> -->
     <button class="btn btn-lg btn-primary btn-block" type="submit">회원가입</button>
     <p class="mt-5 mb-3 text-muted">&copy; 2017-2020</p>
-</form> -->
+</form>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-
-
-<h1>회원가입</h1>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
