--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -15,20 +15,27 @@
 </head>
 
 <body class="text-center">
-  <form role="form" method="post" action="/member/login">
-    <div class="form-group">
-      <label th:for="email">이메일주소</label>
-      <input type="email" name="email" class="form-control" placeholder="이메일을 입력해주세요">
-    </div>
-    <div class="form-group">
-      <label th:for="password">비밀번호</label>
-      <input type="password" name="password" id="password" class="form-control" placeholder="비밀번호 입력">
-    </div>
-<!--     <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p> -->
-    <button class="btn btn-primary">로그인</button>
-    <button type="button" class="btn btn-primary" onClick="location.href='/member/joinForm'">회원가입</button>
-<!--     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"> -->
-  </form>
+    <form class="form-signin" th:action="@{/member/login}" method="post">
+        <a th:href="@{/}"><img class="mb-4" src="https://getbootstrap.com/docs/4.5/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72"></a>
+        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <div th:if="${param.error}" class="alert alert-danger" role="alert">
+            Invalid username and password.
+        </div>
+        <div th:if="${param.logout}" class="alert alert-primary" role="alert">
+            You have been logged out.
+        </div>
+        <label for="username" class="sr-only">Username</label>
+        <input type="text" id="username" name="username" class="form-control" placeholder="Username" required autofocus>
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
+        <!-- <div class="checkbox mb-3">
+          <label>
+            <input type="checkbox" value="remember-me"> Remember me
+          </label>
+        </div> -->
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <p class="mt-5 mb-3 text-muted">&copy; 2017-2020</p>
+    </form>
 
 </body>
 
