--- a/src/main/resources/templates/board/content.html
+++ b/src/main/resources/templates/board/content.html
@@ -8,27 +8,23 @@
 <body>
 	<h1>게시글 상세조회</h1>
 	
-		<div id="wrap">
-	
+	<div id="wrap">
+
 	    <input type="hidden" value="[[${dto.bno}]]">
 
 	
 	    <div class="row board_title">
 	
 	            <div>제목 : [[${dto.title}]]</div>
-	
-
 
 	    </div>
 	
 	
 	    <div class="row board_info">
 	
-	            <div>작성자 : [[${dto.writer}]]</div><br>
-	
+	            <div>작성자 : [[${dto.writer}]]</div>
 
-	
-	            <div>작성날짜 : [[${dto.regDate}]]</div><br>
+	            <div>작성날짜 : [[${dto.regDate}]]</div>
 
 	    </div>
 	
@@ -41,6 +37,19 @@
 	
 	
 	    <div class="row">
+	    
+	    	<a th:href="@{/board/modifyForm(bno= ${dto.bno}, page=${requestDTO.page})}">
+	    		<button type="button" class="btn btn-primary">수정</button>	    	
+	    	</a>
+        	
+        	
+        	 <a th:href="@{/board/delete(bno= ${dto.bno}, page=${requestDTO.page})}">
+        		<button type="button" class="btn btn-danger removeBtn">삭제</button>
+        	</a>
+        	
+        	<a th:href="@{/board/list(page=${requestDTO.page})}">
+            	<button type="button" class="btn btn-info">목록</button>
+        	</a>
 
 	    </div>
 
