--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,36 +1,42 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"  xmlns:sec="http://www.thymeleaf.org/extras/spring-security"> <!-- 타임리프, 시큐리티 -->
+<html xmlns:th="http://www.thymeleaf.org" 
+     	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+     	layout:decorate="~{layouts/layout1}" 
+		xmlns:sec="http://www.thymeleaf.org/extras/spring-security"> 
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 
+<div layout:fragment="content">
+
 <h1>대문</h1>
 
-<a th:href="@{/member/joinForm}" sec:authorize="!isAuthenticated()">회원가입</a>
-<a th:href="@{/member/login}" sec:authorize="!isAuthenticated()">로그인</a>
+	<a th:href="@{/member/joinForm}" sec:authorize="!isAuthenticated()">회원가입</a>
+	
+	<a th:href="@{/member/login}" sec:authorize="!isAuthenticated()">로그인</a>
+	
+	
+	<span  sec:authorize="isAuthenticated()" sec:authentication="name">사용자</span>
+	<span  sec:authorize="isAuthenticated()" sec:authentication="principal.authorities">권한</span>
+	
+	<br>
+	
+	<a th:href="@{/board/list}" sec:authorize="isAuthenticated()">게시판</a>
+	
+	
+	<br>
+	<a th:href="@{/logout}" sec:authorize="isAuthenticated()">로그아웃</a> 
+	
+	
+	<br>
+	
+	<!-- <a th:href="@{/regCategoryForm}">카테고리 등록</a>
+	<a th:href="@{/regBoardForm}">게시글 등록</a>
+	<a th:href="@{/board/list}">전체 게시글 목록</a> -->
 
-
-<span  sec:authorize="isAuthenticated()" sec:authentication="name">사용자</span>
-<span  sec:authorize="isAuthenticated()" sec:authentication="principal.authorities">권한</span>
-
-<br>
-
-<a th:href="@{/board/list}" sec:authorize="isAuthenticated()">게시판</a>
-
-
-<br>
-<a th:href="@{/logout}" sec:authorize="isAuthenticated()">로그아웃</a> 
-
-
-<br>
-
-<!-- <a th:href="@{/regCategoryForm}">카테고리 등록</a>
-<a th:href="@{/regBoardForm}">게시글 등록</a>
-<a th:href="@{/board/list}">전체 게시글 목록</a> -->
-
-
+</div>
 
 </body>
 </html>
