--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -14,10 +14,11 @@
 
 <div layout:fragment="content">
 
-  <form role="form" method="post" action="/members/login">
+  <form role="form" method="post" action="/member/login">
     <div class="form-group">
       <label th:for="email">이메일주소</label>
       <input type="email" name="email" class="form-control" placeholder="이메일을 입력해주세요">
+<!--       <input type="email" name="email" class="form-control" placeholder="이메일을 입력해주세요"> -->
     </div>
     <div class="form-group">
       <label th:for="password">비밀번호</label>
@@ -25,8 +26,8 @@
     </div>
     <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
     <button class="btn btn-primary">로그인</button>
-    <button type="button" class="btn btn-primary" onClick="location.href='/members/new'">회원가입</button>
-    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+<!--     <button type="button" class="btn btn-primary" onClick="location.href='/members/new'">회원가입</button> -->
+<!--     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"> -->
   </form>
 
 </div>
