--- a/src/main/resources/templates/member/joinForm.html
+++ b/src/main/resources/templates/member/joinForm.html
@@ -12,19 +12,19 @@
     </style>
 </th:block>
 
-<!-- 사용자 스크립트 추가 -->
 <th:block layout:fragment="script">
 
-    <script th:inline="javascript">
+<!--     <script th:inline="javascript">
         $(document).ready(function(){
             var errorMessage = '[[${errorMessage}]]';
             if(errorMessage != null){
                 alert(errorMessage);
             }
         });
-    </script>
+    </script> -->
 
 </th:block>
+
 
 <div layout:fragment="content">
 
@@ -46,15 +46,36 @@
         </div>
         <div class="form-group">
             <label th:for="address">주소</label>
-            <input type="text" th:field="*{address}" class="form-control" placeholder="주소를 입력해주세요">
-            <p th:if="${#fields.hasErrors('address')}" th:errors="*{address}" class="fieldError">Incorrect data</p>
+            	<input type="text" th:field="*{address}" class="form-control" placeholder="주소를 입력해주세요(선택사항)" id="address_kakao" name="address" readonly>
+            <label th:for="address">상세주소</label>
+            	<input type="text" name="address_detail">
+<!--             <p th:if="${#fields.hasErrors('address')}" th:errors="*{address}" class="fieldError">Incorrect data</p> -->
         </div>
         <div style="text-align: center">
-            <button type="submit" class="btn btn-primary" style="">Submit</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
         </div>
-        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+        
     </form>
 
+<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+<script>
+window.onload = function(){
+    document.getElementById("address_kakao").addEventListener("click", function(){ //주소입력칸을 클릭하면
+        //카카오 지도 발생
+        new daum.Postcode({
+            oncomplete: function(data) { //선택시 입력값 세팅
+                document.getElementById("address_kakao").value = data.address; // 주소 넣기
+                document.querySelector("input[name=address_detail]").focus(); //상세입력 포커싱
+            }
+        }).open();
+    });
+}
+
+</script>
+
 </div>
+
+
+
 
 </html>
