댓글 기능 구현중

--- a/src/main/resources/templates/board/content.html
+++ b/src/main/resources/templates/board/content.html
@@ -56,6 +56,31 @@
 
 	</div>
 	
+	<!-- 댓글 -->
+	
+<!-- 	<div>
+		<table class="cmtListTable" border="1">
+			<tr>
+				<td>작성자</td>
+				<td>작성일</td>
+				<td>내용</td>
+				<td>group</td>
+				<td>sequence</td>
+			</tr>
+			<tr th:each="comment : ${content.comments}">
+				<td th:text="${comment.member.username}"></td>
+				<td th:text="${comment.cmRegdate}"></td>
+				<td th:text="${comment.cmContent}"></td>
+				<td th:text="${comment.cmGrp}"></td>
+				<td th:text="${comment.cmSeq}"></td>
+				<td>
+					<button class="replyBtn" th:id="${comment.cmGrp}">답글</button>
+				</td>
+			</tr>
+			
+		</table>
+	</div>	 -->
+	
 
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
