--- a/src/main/resources/templates/member/joinForm.html
+++ b/src/main/resources/templates/member/joinForm.html
@@ -13,6 +13,7 @@
 </th:block>
 
 <th:block layout:fragment="script">
+<!-- 중복회원 에러메세지 -->
 
 <!--     <script th:inline="javascript">
         $(document).ready(function(){
@@ -47,8 +48,8 @@
         <div class="form-group">
             <label th:for="address">주소</label>
             	<input type="text" th:field="*{address}" class="form-control" placeholder="주소를 입력해주세요(선택사항)" id="address_kakao" name="address" readonly>
-            <label th:for="address">상세주소</label>
-            	<input type="text" name="address_detail">
+            <!-- <label th:for="address">상세주소</label>
+            	<input type="text" name="address_detail"> -->
 <!--             <p th:if="${#fields.hasErrors('address')}" th:errors="*{address}" class="fieldError">Incorrect data</p> -->
         </div>
         <div style="text-align: center">
@@ -65,7 +66,6 @@ window.onload = function(){
         new daum.Postcode({
             oncomplete: function(data) { //선택시 입력값 세팅
                 document.getElementById("address_kakao").value = data.address; // 주소 넣기
-                document.querySelector("input[name=address_detail]").focus(); //상세입력 포커싱
             }
         }).open();
     });
